--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "colord": "^2.9.3",
